# FlyDSL

./: README.md  setup.py
.github/workflows/: build-custom-llvm-tools.yaml  build-whl.yaml  ci.yaml  flydsl.yaml  promote.yaml
docs/: layout_system_guide.md  quickstart.rst
docs/api/: dsl.rst
examples/: 01-vectorAdd.py
kernels/: __init__.py  blockscale_preshuffle_gemm.py  custom_all_reduce.py  flash_attn_func.py  fp8_gemm_4wave.py  fp8_gemm_8wave.py  fused_rope_cache_kernel.py  gemm_fp8fp4_gfx1250.py  hgemm_splitk.py  layernorm_kernel.py  layout_utils.py  mfma_epilogues.py  mfma_preshuffle_pipeline.py  mixed_moe_gemm_2stage.py  mla_fwd_decode.py  mla_fwd_decode_m16x8_fp8_fp8.py  moe_blockscale_2stage.py  moe_gemm_2stage.py  moe_gemm_2stage_common_gfx1250.py  moe_gemm_2stage_wmma_gfx1250.py  pa_decode_fp8.py  preshuffle_gemm.py  preshuffle_gemm_v2.py  rdna_fp8_preshuffle_gemm.py  rmsnorm_kernel.py  silu_and_mul_fq.py  softmax_kernel.py  tensor_shim.py  topk_gating_softmax_kernel.py  wmma_gemm_gfx1250.py
lib/Runtime/ROCm/: CMakeLists.txt  FlyRocmRuntimeWrappers.cpp
python/flydsl/: __init__.py  _compat.py  autotune.py
scripts/: generate_summary.py
tests/: __init__.py  arch_compat.py  conftest.py  test_common.py  utils.py
tests/kernels/: bench_preshuffle_gemm_v2.py  benchmark_common.py  compare_allreduce_benchmark.py  conftest.py  test_allreduce.py  test_blockscale_preshuffle_gemm.py  test_flash_attn_func.py  test_flydsl_shmem.py  test_fp8_gemm_4wave.py  test_fused_rope_cache.py  test_gemm_fp8fp4_gfx1250.py  test_hgemm_splitk.py  test_layernorm.py  test_pa.py  (+15 more)
(+72 files in other folders)
